src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_from_Lead__c</fullName>
        <label>Address from Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) ,IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), YEAR (Today()) - YEAR ( Birthdate ), YEAR (Today()) - YEAR ( Birthdate ) -1 ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allegiance__c</fullName>
        <label>Allegiance</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Barangay__c</fullName>
        <label>Barangay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Notification__c</fullName>
        <description>Bills and Payment Notification</description>
        <label>Billing Notification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRL__c</fullName>
        <label>CTRL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Payment_Profile__c</fullName>
        <label>Payment Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Delinquent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Socio_Economic_Profile__c</fullName>
        <label>Socio-Economic Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBG</fullName>
                </value>
                <value>
                    <fullName>Biz GP</fullName>
                </value>
                <value>
                    <fullName>Biz Non-GP</fullName>
                </value>
                <value>
                    <fullName>Microbiz</fullName>
                </value>
                <value>
                    <fullName>Resi High</fullName>
                </value>
                <value>
                    <fullName>Resi Mid</fullName>
                </value>
                <value>
                    <fullName>Resi Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_isPortalContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPortalContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IF(ISPICKVAL( Preferred_Channel__c ,&quot;Email&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Email.png&apos;,&apos;Email&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;Phone&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Phone.png&apos;, &apos;Phone&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;Web&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Web.png&apos;, &apos;Web&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;Chatter&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Chatter.png&apos;, &apos;Chatter&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;Twitter&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Twitter.png&apos;, &apos;Twitter&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;SMS&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/SMS.png&apos;, &apos;SMS&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;Skype&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Skype.png&apos;, &apos;Skype&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;PostalMail&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/PostalMail.png&apos;, &apos;PostalMail&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;LinkedIn&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Linkedin.png&apos;, &apos;Linkedin&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;InPerson&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/InPerson.png&apos;, &apos;InPerson&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;HomeVisit&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Homevisit.png&apos;, &apos;Homevisit&apos;, 50, 50),
IF(ISPICKVAL(Preferred_Channel__c ,&quot;Facebook&quot;), IMAGE(&apos;/resource/Channels_Images/Channels_Images/Facebook.png&apos;, &apos;Facebook&apos;, 50, 50),
IMAGE(&apos;/resource/Channels_Images/Channels_Images/Email.png&apos;,&apos;Email&apos;, 50, 50)





))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Municipal__c</fullName>
        <label>City / Municipality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>City_Municipality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_For__c</fullName>
        <label>Contact For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RCOA</fullName>
                </value>
                <value>
                    <fullName>ILP</fullName>
                </value>
                <value>
                    <fullName>Billing &amp; Payments</fullName>
                </value>
                <value>
                    <fullName>Power Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Converted from Lead</description>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastActivity__c</fullName>
        <formula>IF(TODAY() = LastActivityDate, &quot;Today&quot;, IF(ISBLANK(LastActivityDate),&quot;Never&quot;, TEXT(TODAY()-LastActivityDate) &amp; &quot; Days Ago&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Customer Services</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources (HR)</fullName>
                </value>
                <value>
                    <fullName>Information Technology (IT)</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Public Relations (PR)</fullName>
                </value>
                <value>
                    <fullName>Research and Development (R&amp;D)</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Events_Attended__c</fullName>
        <label>Events Attended</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Golf Event</fullName>
                </value>
                <value>
                    <fullName>Powerclub</fullName>
                </value>
                <value>
                    <fullName>Luminaries</fullName>
                </value>
                <value>
                    <fullName>Luminaries Attendance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacebookOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facebook Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <description>Google</description>
        <label>Google+</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_No__c</fullName>
        <label>House #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Birthday_del__c</fullName>
        <formula>IF( DAY(Birthdate) = DAY(TODAY())&amp;&amp; MONTH(Birthdate) = MONTH(TODAY())  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Birthday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Specifies the Contact&apos;s preferred language</description>
        <inlineHelpText>Preferred language</inlineHelpText>
        <label>Contact Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Nationality__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Galician</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Welsh</fullName>
                </value>
                <value>
                    <fullName>Scots Gaelic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Living common law</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_1__c</fullName>
        <label>Primary Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_2__c</fullName>
        <inlineHelpText>Mobile Phone should start with +63 then followed by 10-digit number (Ex. +639178851234).</inlineHelpText>
        <label>Secondary Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_3__c</fullName>
        <inlineHelpText>Mobile Phone should start with +63 then followed by 10-digit number (Ex. +639178851234).</inlineHelpText>
        <label>Alternative Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NS_BillingNotificationEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Billing Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_BillingNotificationSms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Notification Sms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_OutagesEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outages Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_OutagesSms__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Outages Sms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_PaymentConfirmationEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Payment Confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_PaymentConfirmationSms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Confirmation Sms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_PaymentRemindersEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Payment Reminders Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_PaymentRemindersSms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Reminders Sms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_PromotionsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotions Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_PromotionsSms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotions Sms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_ServiceApplicationEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Application Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_ServiceApplicationSms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Application Sms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Belgian</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Dane</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>European</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Filipino-Australian</fullName>
                </value>
                <value>
                    <fullName>Filipino-Chinese</fullName>
                </value>
                <value>
                    <fullName>Finn</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>German-Itallian</fullName>
                    <label>German-Italian</label>
                </value>
                <value>
                    <fullName>Icelander</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Iranian</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Luxembourger</fullName>
                </value>
                <value>
                    <fullName>Malaysian</fullName>
                </value>
                <value>
                    <fullName>Malaysian-Indian</fullName>
                </value>
                <value>
                    <fullName>Mexican</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outages_Notification__c</fullName>
        <description>Bills and Payment Notification</description>
        <label>Outages Notification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Confirmation_Notification__c</fullName>
        <description>Bills and Payment Notification</description>
        <label>Payment Confirmation Notification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Reminders__c</fullName>
        <description>Bills and Payment Notification</description>
        <label>Payment Reminders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreferedContactMethodImg__c</fullName>
        <formula>IMAGE( 
CASE(  PreferedContactMethod__c, 
&quot;Telephone&quot;, &quot;img/icon/custom51_100/headset24.png&quot;, 
&quot;In Person (Door to Door)&quot;, &quot;img/icon/portals24.png&quot;, 
&quot;E-mail&quot;, &quot;img/icon/mail24.png&quot;, 
&quot;Postal Mail&quot;, &quot;img/icon/form24.png&quot;, 
&quot;img/icon/custom51_100/headset24.png&quot;), 
&quot;Contact Method&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefered Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferedContactMethod__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>In Person (Door to Door)</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>mobile</fullName>
                    <label>Mobile</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreferredContactHour__c</fullName>
        <label>Preferred Contact Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Channel__c</fullName>
        <label>Preferred Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Skype</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Home Visit</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Telephone_Extension__c</fullName>
        <description>Telephone 1 Extension</description>
        <label>Primary Telephone Extension</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotions_Notification__c</fullName>
        <description>Bills and Payment Notification</description>
        <label>Promotions Notification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PushNotificationOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push Notification Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SID__c</fullName>
        <label>SID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Telephone_Extension__c</fullName>
        <description>Telephone 2 Extension</description>
        <label>Secondary Telephone Extension</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Applications_Notification__c</fullName>
        <description>Bills and Payment Notification</description>
        <label>Service Applications Notification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sports_Hobbies_and_Interests__c</fullName>
        <label>Sports, Hobbies, and Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision_Bldg_Name__c</fullName>
        <label>Subdivision / Bldg Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_1__c</fullName>
        <description>Telephone 1</description>
        <label>Primary Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_2__c</fullName>
        <description>Telephone 2</description>
        <inlineHelpText>Phone should start with +63 then followed by 1 to 2-digit area code and 7-digit number (Ex. +6328851234).</inlineHelpText>
        <label>Secondary Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwitterOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Twitter Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <label>Unit #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>